--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -136,70 +136,86 @@ if the content is smaller than the max space. */
     display: grid;
     width: 70.5vw;
     height: 680px;
-    grid-template-columns: 32.25vw 7.2vw 31.2vw;
-    grid-template-rows: 100px 200px 150px 20px 20px 20px;
+    grid-template-columns: 11vw 11vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
+    grid-template-rows: 100px 350px 25px 25px 180px;
 }
 
 .recipePopupTitleField {
     width: 455px;
     align-items: center;
+    grid-column: 1;
+    grid-row: 1 / 3;
 }
 
 .recipePopupTitleField {
     font-size: 2em;
-    margin: 0;
-    grid-column: 1;
+    grid-column: 1 / 6;
     grid-row: 1;
+    margin: auto;
+    text-align: center;
 }
 
 .recipePopupImage {
-    grid-column: 1;
-    grid-row: 2 / 3;
-}
-
-.recipePopupCookTimeField {
-    grid-column: 1;
-    grid-row: 5;
+    width: 400px;
+    height: 350px;
+    image-orientation: 10px;
+    margin: auto;
+    grid-column: 1 / 6;
+    grid-row: 2;
 }
 
 .recipePopupDifficultyField {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 3;
+    margin: auto;
 }
 
-.recipePopupEthnicityField {
-    grid-column: 1;
-    grid-row: 7;
+.recipePopupCookTimeField {
+    grid-column: 2;
+    grid-row: 3;
+    margin: auto;
 }
 
 .recipePopupCategoryField {
     grid-column: 1;
-    grid-row: 6;
+    grid-row: 4;
+    margin: auto;
+}
+
+.recipePopupEthnicityField {
+    grid-column: 2;
+    grid-row: 4;
+    margin: auto;
 }
 
 .recipePopupVegetarianField {
-    grid-column: 1;
-    grid-row: 7;
+    grid-column: 3;
+    grid-row: 3 / 5;
+    margin: auto;
 }
 
 .recipePopupVeganField {
-    grid-column: 1;
-    grid-row: 9;
+    grid-column: 4;
+    grid-row: 3 / 5;
+    margin: auto;
 }
 
 .recipePopupGlutenFreeField {
-    grid-column: 1;
-    grid-row: 10;
-}
-
-.recipePopupInstructionsField {
-    grid-column: 3;
-    grid-row: 3;
+    grid-column: 5;
+    grid-row: 3 / 5;
+    margin: auto;
 }
 
 .recipePopupIngredientsField {
-    grid-column: 3;
-    grid-row: 1;
+    grid-column: 1 / 6;
+    grid-row: 5;
+    margin: auto;
+    text-align: justify;
+}
+
+.recipePopupInstructionsField {
+    grid-column: 7;
+    grid-row: 1 / auto;
 }
 
 /* Blur on Hover */
