--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -1,11 +1,4 @@
 /* New Recipe Styles */
-.newRecipeHeader {
-    text-align: center;
-    font-size: 72px;
-    font-weight: bold;
-    font-family: 'Allura', cursive;
-}
-
 .notebookPage {
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
@@ -15,17 +8,28 @@
     /* background-blend-mode: color; */
     /* background-attachment: fixed; */
     position: relative;
-    top: 10px;
-    left: 0%;
+    top: 5vh;
+    left: 0 %;
     /* transform: translate(-80%, 10%); */
+    display: grid;
     width: 1600px;
     height: 1200px;
+    grid-template-columns: 11vw 11vw auto;
+    grid-template-rows: 100px 100px 100px 100px 100px auto;
     padding-left: 10%;
     padding-top: 3.5%;
     /* padding-bottom: 20px; */
     /* box-sizing: border-box; */
     /* box-shadow: 0 15px 25px rgba(0, 0, 0, .5); */
     /* border-radius: 10px; */
+}
+
+.notebookPageTable {
+    display: grid;
+    width: 1600px;
+    height: 1200px;
+    grid-template-columns: 11vw 11vw auto;
+    grid-template-rows: 100px 100px 100px 100px 100px auto;
 }
 
 .newRecipeFormContent {
@@ -126,7 +130,7 @@
 .newRecipeIngredientsField {
     position: absolute;
     top: -0.5%;
-    left: 90%;
+    left: 120%;
 }
 
 .newRecipeIngredientsField textarea {
@@ -138,7 +142,7 @@
 .newRecipeInstructionsField {
     position: absolute;
     top: 35%;
-    left: 90%;
+    left: 120%;
 }
 
 .newRecipeInstructionsField textarea {
@@ -151,18 +155,21 @@
     float: left;
     padding-top: 55px;
     padding-right: 70px;
+    font-size: 20px;
 }
 
 .newRecipeVeganField {
     float: left;
     padding-top: 55px;
     padding-right: 70px;
+    font-size: 20px;
 }
 
 .newRecipeGlutenFreeField {
-    /* float: left; */
+    float: left;
     padding-top: 55px;
     padding-right: 100px;
+    font-size: 20px;
 }
 
 .newRecipeButton {
