--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -1,11 +1,4 @@
 /* New Recipe Styles */
-.newRecipeHeader {
-    text-align: center;
-    font-size: 72px;
-    font-weight: bold;
-    font-family: 'Allura', cursive;
-}
-
 .notebookPage {
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
@@ -16,7 +9,7 @@
     /* background-attachment: fixed; */
     position: relative;
     top: 10px;
-    left: 0%;
+    left: 7%;
     /* transform: translate(-80%, 10%); */
     width: 1600px;
     height: 1200px;
@@ -126,7 +119,7 @@
 .newRecipeIngredientsField {
     position: absolute;
     top: -0.5%;
-    left: 90%;
+    left: 120%;
 }
 
 .newRecipeIngredientsField textarea {
@@ -138,7 +131,7 @@
 .newRecipeInstructionsField {
     position: absolute;
     top: 35%;
-    left: 90%;
+    left: 120%;
 }
 
 .newRecipeInstructionsField textarea {
@@ -151,18 +144,21 @@
     float: left;
     padding-top: 55px;
     padding-right: 70px;
+    font-size: 20px;
 }
 
 .newRecipeVeganField {
     float: left;
     padding-top: 55px;
     padding-right: 70px;
+    font-size: 20px;
 }
 
 .newRecipeGlutenFreeField {
-    /* float: left; */
+    float: left;
     padding-top: 55px;
     padding-right: 100px;
+    font-size: 20px;
 }
 
 .newRecipeButton {
