--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -62,12 +62,6 @@ if the content is smaller than the max space. */
     transform: scale(1.05);
 }
 
-.favoriteCheckbox {
-    position: relative;
-    top: 91%;
-    left: -97%;
-}
-
 .specialChecks {
     display: flex;
     border: 2px dashed green;
@@ -138,13 +132,6 @@ if the content is smaller than the max space. */
     height: 680px;
     grid-template-columns: 11vw 11vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
     grid-template-rows: 100px 350px 25px 25px 180px;
-}
-
-.recipePopupTitleField {
-    width: 455px;
-    align-items: center;
-    grid-column: 1;
-    grid-row: 1 / 3;
 }
 
 .recipePopupTitleField {
@@ -220,6 +207,73 @@ if the content is smaller than the max space. */
     margin: auto;
 }
 
+.favoriteCheckboxContainer {
+    position: relative;
+    top: 80%;
+    left: -90%;
+}
+
+input[name="FavoriteButton"] {
+    position: relative;
+    display: block;
+    color: grey;
+    width: 0;
+    height: 0;
+    border-right: 50px solid transparent;
+    border-bottom: 35px solid grey;
+    border-left: 50px solid transparent;
+    transform: rotate(35deg);
+    -webkit-appearance: none;
+    outline: none;
+}
+
+input[name="FavoriteButton"]:before {
+    border-bottom: 40px solid grey;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: -24px;
+    left: -30px;
+    display: block;
+    content: '';
+    transform: rotate(-35deg);
+}
+
+input[name="FavoriteButton"]:after {
+    position: absolute;
+    display: block;
+    color: grey;
+    top: 0px;
+    left: -50px;
+    width: 0px;
+    height: 0px;
+    border-right: 50px solid transparent;
+    border-bottom: 35px solid grey;
+    border-left: 50px solid transparent;
+    transform: rotate(-70deg);
+    content: '';
+}
+
+input:checked[name="FavoriteButton"] {
+    border-right: 50px solid transparent;
+    border-bottom: 35px solid gold;
+    border-left: 50px solid transparent;
+}
+
+input:checked[name="FavoriteButton"]:after {
+    border-right: 50px solid transparent;
+    border-bottom: 35px solid gold;
+    border-left: 50px solid transparent;
+}
+
+input:checked[name="FavoriteButton"]:before {
+    border-right: 15px solid transparent;
+    border-bottom: 40px solid gold;
+    border-left: 15px solid transparent;
+}
+
 /* Blur on Hover */
 /*
 
@@ -265,67 +319,6 @@ section .layer1 {
     margin: 0;
     padding: 0;
     background: #292929;
-} */
-/* COOL LOOKING CHECKBOX CSS */
-/*
-.coolCheckbox {
-    position: relative;
-    top: 125%;
-    left: -75%;
-    z-index: 20;
-    transform: translate(-50%, -50%);
-}
-
-input[type="checkbox"] {
-    position: relative;
-    width: 120px;
-    height: 40px;
-    -webkit-appearance: none;
-    background: linear-gradient(0deg, #333, #000);
-    outline: none;
-    border-radius: 20px;
-    box-shadow: 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, .5), inset 0 0 15px rgba(0, 0, 0, .2);
-}
-
-input:checked[type="checkbox"] {
-    background: linear-gradient(0deg, #6dd1ff, #20b7ff);
-    box-shadow: 0 0 2px #6dd1ff, 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, .5), inset 0 0 15px rgba(0, 0, 0, .2);
-}
-
-input[type="checkbox"]:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 80px;
-    height: 40px;
-    background: linear-gradient(0deg, #000, #6b6b6b);
-    border-radius: 20px;
-    box-shadow: 0 0 0 1px #232323;
-    transform: scale(.98, .96);
-    transition: .5s;
-}
-
-input:checked[type="checkbox"]:before {
-    left: 40px;
-}
-
-input[type="checkbox"]:after {
-    content: '';
-    position: absolute;
-    top: calc(50% - 2px);
-    left: 65px;
-    width: 4px;
-    height: 4px;
-    background: linear-gradient(0deg, #6b6b6b, #000);
-    border-radius: 50%;
-    transition: .5s;
-}
-
-input:checked[type="checkbox"]:after {
-    background: #63cdff;
-    left: 105px;
-    box-shadow: 0 0 5px #13b3ff, 0 0 15px #13b3ff;
 }
 */
 /* Rainbow Gradient Shadow */
