--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -27,41 +27,60 @@
     display: grid;
     font-size: 36px;
     font-family: 'Allura', cursive;
-    grid-template-columns: 11vw 11vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
-    grid-template-rows: 100px 350px 25px 25px 180px;
+    grid-template-columns: 11vw 11vw 11vw 7vw 11vw 11vw 11vw;
+    grid-template-rows: 75px 275px 75px 75px 50px 75px 100px 50px;
 }
 
+/* total height : 775px */
 .newRecipeTitleField {
-    position: relative;
-    top: 20px;
-    text-align: left;
     font-size: 42px;
-    padding-bottom: 15px;
     background-color: transparent;
-}
-
-.newRecipeTitleField label {
-    padding-right: 15px;
+    grid-column: 1 / 4;
+    grid-row: 1;
 }
 
 .newRecipeTitleField input {
+    margin: auto;
+    text-align: center;
+    background-color: transparent;
+    border-radius: 3px;
+    border-width: medium;
+    width: 95%;
+}
+
+.newRecipeImageUpload {
+    grid-column: 1 / 4;
+    grid-row: 2 / 4;
+    margin: auto;
+}
+
+.newRecipeImageUpload label {
+    margin-left: 20px
+}
+
+.cookTimeLabel {
+    grid-column: 1;
+    grid-row: 4;
+    margin: auto;
+}
+
+.newRecipeCookTimeField {
+    grid-column: 2 / 4;
+    grid-row: 4;
+    margin: auto;
+    width: 100%;
+}
+
+.newRecipeCookTimeField input {
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
 }
 
-.newRecipeImageUpload {
-    padding-top: 8%;
-    padding-left: 0%;
-}
-
-.newRecipeDifficultyAndTimeLine {
-    padding-top: 65px;
-    padding-bottom: 12px;
-}
-
 .newRecipeDifficultyField {
-    float: left;
+    grid-column: 1;
+    grid-row: 5 / 7;
+    margin: auto;
 }
 
 .newRecipeDifficultyField label {
@@ -74,26 +93,10 @@
     border-width: medium;
 }
 
-.newRecipeCookTimeField {
-    padding-left: 175px;
-}
-
-.newRecipeCookTimeField label {
-    margin-bottom: 1px;
-}
-
-.newRecipeCookTimeField input {
-    background-color: transparent;
-    border-radius: 3px;
-    border-width: medium;
-}
-
-.newRecipeCategoryAndCuisineLine {
-    padding-bottom: 14px;
-}
-
 .newRecipeCategoryField {
-    float: left;
+    grid-column: 2;
+    grid-row: 5 / 7;
+    margin: auto;
 }
 
 .newRecipeCategoryField label {
@@ -107,7 +110,9 @@
 }
 
 .newRecipeCuisineField {
-    padding-left: 175px;
+    grid-column: 3;
+    grid-row: 5 / 7;
+    margin: auto;
 }
 
 .newRecipeCuisineField label {
@@ -120,56 +125,54 @@
     border-width: medium;
 }
 
+.newRecipeVegetarianField {
+    grid-column: 1;
+    grid-row: 7 / 9;
+    margin: auto;
+}
+
+.newRecipeVeganField {
+    grid-column: 2;
+    grid-row: 7 / 9;
+    margin: auto;
+}
+
+.newRecipeGlutenFreeField {
+    grid-column: 3;
+    grid-row: 7 / 9;
+    margin: auto;
+}
+
 .newRecipeIngredientsField {
-    position: absolute;
-    top: -0.5%;
-    left: 120%;
+    grid-column: 5 / 8;
+    grid-row: 1 / 3;
 }
 
 .newRecipeIngredientsField textarea {
+    width: 95%;
+    height: 85%;
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
 }
 
 .newRecipeInstructionsField {
-    position: absolute;
-    top: 35%;
-    left: 120%;
+    grid-column: 5 / 8;
+    grid-row: 3 / 8;
 }
 
 .newRecipeInstructionsField textarea {
+    width: 95%;
+    height: 82%;
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
 }
 
-.newRecipeVegetarianField {
-    float: left;
-    padding-top: 55px;
-    padding-right: 70px;
-    font-size: 20px;
-}
-
-.newRecipeVeganField {
-    float: left;
-    padding-top: 55px;
-    padding-right: 70px;
-    font-size: 20px;
-}
-
-.newRecipeGlutenFreeField {
-    float: left;
-    padding-top: 55px;
-    padding-right: 100px;
-    font-size: 20px;
-}
-
 .newRecipeButton {
     border-radius: 15px;
-    position: relative;
-    top: -150px;
-    left: 1000px;
+    grid-column: 7;
+    grid-row: 8;
 }
 
 .newRecipeIDField {
