--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -27,60 +27,41 @@
     display: grid;
     font-size: 36px;
     font-family: 'Allura', cursive;
-    grid-template-columns: 11vw 11vw 11vw 7vw 11vw 11vw 11vw;
-    grid-template-rows: 75px 275px 75px 75px 50px 75px 100px 50px;
+    grid-template-columns: 11vw 11vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
+    grid-template-rows: 100px 350px 25px 25px 180px;
 }
 
-/* total height : 775px */
 .newRecipeTitleField {
+    position: relative;
+    top: 20px;
+    text-align: left;
     font-size: 42px;
+    padding-bottom: 15px;
     background-color: transparent;
-    grid-column: 1 / 4;
-    grid-row: 1;
+}
+
+.newRecipeTitleField label {
+    padding-right: 15px;
 }
 
 .newRecipeTitleField input {
-    margin: auto;
-    text-align: center;
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
-    width: 95%;
 }
 
 .newRecipeImageUpload {
-    grid-column: 1 / 4;
-    grid-row: 2 / 4;
-    margin: auto;
+    padding-top: 8%;
+    padding-left: 0%;
 }
 
-.newRecipeImageUpload label {
-    margin-left: 20px
-}
-
-.cookTimeLabel {
-    grid-column: 1;
-    grid-row: 4;
-    margin: auto;
-}
-
-.newRecipeCookTimeField {
-    grid-column: 2 / 4;
-    grid-row: 4;
-    margin: auto;
-    width: 100%;
-}
-
-.newRecipeCookTimeField input {
-    background-color: transparent;
-    border-radius: 3px;
-    border-width: medium;
+.newRecipeDifficultyAndTimeLine {
+    padding-top: 65px;
+    padding-bottom: 12px;
 }
 
 .newRecipeDifficultyField {
-    grid-column: 1;
-    grid-row: 5 / 7;
-    margin: auto;
+    float: left;
 }
 
 .newRecipeDifficultyField label {
@@ -93,10 +74,26 @@
     border-width: medium;
 }
 
+.newRecipeCookTimeField {
+    padding-left: 175px;
+}
+
+.newRecipeCookTimeField label {
+    margin-bottom: 1px;
+}
+
+.newRecipeCookTimeField input {
+    background-color: transparent;
+    border-radius: 3px;
+    border-width: medium;
+}
+
+.newRecipeCategoryAndCuisineLine {
+    padding-bottom: 14px;
+}
+
 .newRecipeCategoryField {
-    grid-column: 2;
-    grid-row: 5 / 7;
-    margin: auto;
+    float: left;
 }
 
 .newRecipeCategoryField label {
@@ -110,9 +107,7 @@
 }
 
 .newRecipeCuisineField {
-    grid-column: 3;
-    grid-row: 5 / 7;
-    margin: auto;
+    padding-left: 175px;
 }
 
 .newRecipeCuisineField label {
@@ -125,54 +120,56 @@
     border-width: medium;
 }
 
-.newRecipeVegetarianField {
-    grid-column: 1;
-    grid-row: 7 / 9;
-    margin: auto;
-}
-
-.newRecipeVeganField {
-    grid-column: 2;
-    grid-row: 7 / 9;
-    margin: auto;
-}
-
-.newRecipeGlutenFreeField {
-    grid-column: 3;
-    grid-row: 7 / 9;
-    margin: auto;
-}
-
 .newRecipeIngredientsField {
-    grid-column: 5 / 8;
-    grid-row: 1 / 3;
+    position: absolute;
+    top: -0.5%;
+    left: 120%;
 }
 
 .newRecipeIngredientsField textarea {
-    width: 95%;
-    height: 85%;
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
 }
 
 .newRecipeInstructionsField {
-    grid-column: 5 / 8;
-    grid-row: 3 / 8;
+    position: absolute;
+    top: 35%;
+    left: 120%;
 }
 
 .newRecipeInstructionsField textarea {
-    width: 95%;
-    height: 82%;
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
 }
 
+.newRecipeVegetarianField {
+    float: left;
+    padding-top: 55px;
+    padding-right: 70px;
+    font-size: 20px;
+}
+
+.newRecipeVeganField {
+    float: left;
+    padding-top: 55px;
+    padding-right: 70px;
+    font-size: 20px;
+}
+
+.newRecipeGlutenFreeField {
+    float: left;
+    padding-top: 55px;
+    padding-right: 100px;
+    font-size: 20px;
+}
+
 .newRecipeButton {
     border-radius: 15px;
-    grid-column: 7;
-    grid-row: 8;
+    position: relative;
+    top: -150px;
+    left: 1000px;
 }
 
 .newRecipeIDField {
