--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -135,11 +135,12 @@ if the content is smaller than the max space. */
 }
 
 .recipePopupTitleField {
-    font-size: 2em;
+    font-size: 2.5em;
     grid-column: 1 / 6;
     grid-row: 1;
     margin: auto;
     text-align: center;
+    text-decoration: underline;
 }
 
 .recipePopupImage {
@@ -149,6 +150,8 @@ if the content is smaller than the max space. */
     margin: auto;
     grid-column: 1 / 6;
     grid-row: 2;
+    border-radius: 10px;
+    border: 1px solid black;
 }
 
 .recipePopupDifficultyField {
@@ -200,11 +203,25 @@ if the content is smaller than the max space. */
     text-align: justify;
 }
 
+.recipePopupInstructionsLabel {
+    grid-column: 7;
+    grid-row: 1;
+    text-align: center;
+    margin-top: 8px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 2em;
+}
+
 .recipePopupInstructionsField {
     grid-column: 7;
     grid-row: 1 / 6;
     text-align: justify;
-    margin: auto;
+    margin-top: 75px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .favoriteCheckboxContainer {
