--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -152,6 +152,12 @@ if the content is smaller than the max space. */
     grid-row: 2;
     border-radius: 10px;
     border: 1px solid black;
+    transition: transform .5s;
+}
+
+.recipePopupImage:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .recipePopupDifficultyField {
@@ -291,80 +297,6 @@ input:checked[name="FavoriteButton"]:before {
     border-left: 15px solid transparent;
 }
 
-/* Button Flipping */
-/*
-button.recipeItemRemoveButton {
-    position: absolute;
-    /* Button Position in div or container
-    top: 90%;
-    left: 20%;
-    transform: translate(-50%, -50%);
-    /* Button Size
-    width: 125px;
-    height: 60px;
-    text-align: center;
-    transform-style: preserve-3d;
-    perspective: 1000px;
-    transform-origin: center center;
-    background: rgba(255, 255, 255, 0);
-    border-color: rgba(255, 255, 255, 0);
-}
-
-span.forFlipButton {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    text-align: center;
-    line-height: 60px;
-    font-size: 24px;
-    background: rgba(255, 255, 255, 0);
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-    border-radius: 30px;
-    text-transform: uppercase;
-    /* Text Color in button
-    color: #000;
-    transition: 0.75s;
-}
-
-span.front {
-    transform: rotateX(0deg) translateZ(20px);
-}
-
-button.recipeItemRemoveButton:hover span.front {
-    transform: rotateX(-540deg) translateZ(20px);
-}
-
-span.back {
-    transform: rotateX(540deg) translateZ(20px);
-}
-
-button.recipeItemRemoveButton:hover span.back {
-    transform: rotateX(0deg) translateZ(20px);
-}
-
-span.center {
-    background: linear-gradient(to right, #c31a5b, #7129bd);
-}
-
-span.center:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, #ffdd1f, #c31a5b);
-    border-radius: 30px;
-    transform: translateZ(-1px);
-}
-
-button.recipeItemRemoveButton:hover span.center {
-    transform: rotateX(-540deg) translateZ(0px);
-} */
 /* Blur on Hover */
 /*
 
