--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -27,15 +27,15 @@
     display: grid;
     font-size: 36px;
     font-family: 'Allura', cursive;
-    grid-template-columns: 11vw 11vw 11vw 7vw 11vw 11vw 11vw;
-    grid-template-rows: 75px 275px 75px 75px 50px 75px 100px 50px;
+    grid-template-columns: 11vw 5.5vw 5.5vw 11vw 7vw 11vw 11vw 11vw;
+    grid-template-rows: 75px 275px 75px 70px 70px 60px 50px 50px 50px;
 }
 
 /* total height : 775px */
 .newRecipeTitleField {
     font-size: 42px;
     background-color: transparent;
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     grid-row: 1;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .newRecipeImageUpload {
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     grid-row: 2 / 4;
     margin: auto;
 }
@@ -58,28 +58,71 @@
     margin-left: 20px
 }
 
-.cookTimeLabel {
+.prepTimeLabel {
     grid-column: 1;
     grid-row: 4;
     margin: auto;
 }
 
-.newRecipeCookTimeField {
-    grid-column: 2 / 4;
+.newRecipePrepTimeFieldHr {
+    grid-column: 2;
     grid-row: 4;
-    margin: auto;
-    width: 100%;
 }
 
-.newRecipeCookTimeField input {
+.newRecipePrepTimeFieldHr input {
     background-color: transparent;
     border-radius: 3px;
     border-width: medium;
+    width: 100%;
+}
+
+.newRecipePrepTimeFieldMin {
+    grid-column: 3;
+    grid-row: 4;
+}
+
+.newRecipePrepTimeFieldMin input {
+    background-color: transparent;
+    border-radius: 3px;
+    border-width: medium;
+    width: 100%;
+}
+
+.cookTimeLabel {
+    grid-column: 1;
+    grid-row: 5;
+    margin: auto;
+}
+
+.newRecipeCookTimeFieldHr {
+    grid-column: 2;
+    grid-row: 5;
+    margin: auto;
+}
+
+.newRecipeCookTimeFieldHr input {
+    background-color: transparent;
+    border-radius: 3px;
+    border-width: medium;
+    width: 100%;
+}
+
+.newRecipeCookTimeFieldMin {
+    grid-column: 3;
+    grid-row: 5;
+    margin: auto;
+}
+
+.newRecipeCookTimeFieldMin input {
+    background-color: transparent;
+    border-radius: 3px;
+    border-width: medium;
+    width: 100%;
 }
 
 .newRecipeDifficultyField {
     grid-column: 1;
-    grid-row: 5 / 7;
+    grid-row: 6 / 8;
     margin: auto;
 }
 
@@ -94,8 +137,8 @@
 }
 
 .newRecipeCategoryField {
-    grid-column: 2;
-    grid-row: 5 / 7;
+    grid-column: 2 / 4;
+    grid-row: 6 / 8;
     margin: auto;
 }
 
@@ -110,8 +153,8 @@
 }
 
 .newRecipeCuisineField {
-    grid-column: 3;
-    grid-row: 5 / 7;
+    grid-column: 4;
+    grid-row: 6 / 8;
     margin: auto;
 }
 
@@ -127,24 +170,24 @@
 
 .newRecipeVegetarianField {
     grid-column: 1;
-    grid-row: 7 / 9;
+    grid-row: 8 / 10;
     margin: auto;
 }
 
 .newRecipeVeganField {
-    grid-column: 2;
-    grid-row: 7 / 9;
+    grid-column: 2 / 4;
+    grid-row: 8 / 10;
     margin: auto;
 }
 
 .newRecipeGlutenFreeField {
-    grid-column: 3;
-    grid-row: 7 / 9;
+    grid-column: 4;
+    grid-row: 8 /10;
     margin: auto;
 }
 
 .newRecipeIngredientsField {
-    grid-column: 5 / 8;
+    grid-column: 6 / 9;
     grid-row: 1 / 3;
 }
 
@@ -157,8 +200,8 @@
 }
 
 .newRecipeInstructionsField {
-    grid-column: 5 / 8;
-    grid-row: 3 / 8;
+    grid-column: 6 / 9;
+    grid-row: 3 / 9;
 }
 
 .newRecipeInstructionsField textarea {
@@ -171,8 +214,8 @@
 
 .newRecipeButton {
     border-radius: 15px;
-    grid-column: 7;
-    grid-row: 8;
+    grid-column: 8;
+    grid-row: 9;
 }
 
 .newRecipeIDField {
