--- a/client/src/Pages/styles.css
+++ b/client/src/Pages/styles.css
@@ -32,25 +32,8 @@
     left: 79%;
 }
 
-/* Button Flipping */
-button.recipeItemRemoveButton {
-    position: absolute;
-    /* Button Position in div or container */
-    top: 108%;
-    left: 82%;
-    transform: translate(-50%, -50%);
-    /* Button Size */
-    width: 125px;
-    height: 60px;
-    text-align: center;
-    transform-style: preserve-3d;
-    perspective: 1000px;
-    transform-origin: center center;
-    background: rgba(255, 255, 255, 0);
-    border-color: rgba(255, 255, 255, 0);
-}
-
-span.forFlipButton {
+/* For Button Flipping */
+.forFlipButton {
     position: absolute;
     top: 0;
     left: 0;
@@ -70,27 +53,45 @@ span.forFlipButton {
     transition: 0.75s;
 }
 
-span.front {
+.front {
     transform: rotateX(0deg) translateZ(20px);
+}
+
+.back {
+    transform: rotateX(540deg) translateZ(20px);
+}
+
+/* Remove Button Flipping */
+button.recipeItemRemoveButton {
+    position: absolute;
+    /* Button Position in div or container */
+    top: 108%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    /* Button Size */
+    width: 125px;
+    height: 60px;
+    text-align: center;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    transform-origin: center center;
+    background: rgba(255, 255, 255, 0);
+    border-color: rgba(255, 255, 255, 0);
 }
 
 button.recipeItemRemoveButton:hover span.front {
     transform: rotateX(-540deg) translateZ(20px);
 }
 
-span.back {
-    transform: rotateX(540deg) translateZ(20px);
-}
-
 button.recipeItemRemoveButton:hover span.back {
     transform: rotateX(0deg) translateZ(20px);
 }
 
-span.center {
+button.recipeItemRemoveButton span.center {
     background: linear-gradient(to right, #c31a5b, #7129bd);
 }
 
-span.center:before {
+button.recipeItemRemoveButton span.center:before {
     content: '';
     position: absolute;
     top: 0;
@@ -104,4 +105,51 @@ span.center:before {
 
 button.recipeItemRemoveButton:hover span.center {
     transform: rotateX(-540deg) translateZ(0px);
+}
+
+/* Edit Button Flipping */
+button.recipeItemEditButton {
+    position: absolute;
+    /* Button Position in div or container */
+    top: 108%;
+    left: 62%;
+    transform: translate(-50%, -50%);
+    /* Button Size */
+    width: 125px;
+    height: 60px;
+    text-align: center;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    transform-origin: center center;
+    background: rgba(255, 255, 255, 0);
+    border-color: rgba(255, 255, 255, 0);
+}
+
+button.recipeItemEditButton:hover span.front {
+    transform: rotateX(-540deg) translateZ(20px);
+}
+
+button.recipeItemEditButton:hover span.back {
+    transform: rotateX(0deg) translateZ(20px);
+}
+
+button.recipeItemEditButton span.center {
+    background: linear-gradient(to right, #1a135b, #ffdd1f);
+}
+
+button.recipeItemEditButton span.center:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #44dd1f, #c31a5b);
+    border-radius: 30px;
+    transform: translateZ(-1px);
+}
+
+button.recipeItemEditButton:hover span.center {
+    transform: rotateX(-540deg) translateZ(0px);
+    background: linear-gradient(to right, #1a135b, #ffdd1f);
 }
