--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -130,13 +130,13 @@ if the content is smaller than the max space. */
     display: grid;
     width: 70.5vw;
     height: 680px;
-    grid-template-columns: 11vw 11vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
+    grid-template-columns: 11vw 5.5vw 5.5vw 3.4vw 3.4vw 3.4vw 7.25vw auto;
     grid-template-rows: 100px 350px 25px 25px 180px;
 }
 
 .recipePopupTitleField {
     font-size: 2.5em;
-    grid-column: 1 / 6;
+    grid-column: 1 / 7;
     grid-row: 1;
     margin: auto;
     text-align: center;
@@ -148,7 +148,7 @@ if the content is smaller than the max space. */
     height: 350px;
     image-orientation: 10px;
     margin: auto;
-    grid-column: 1 / 6;
+    grid-column: 1 / 7;
     grid-row: 2;
     border-radius: 10px;
     border: 1px solid black;
@@ -166,8 +166,14 @@ if the content is smaller than the max space. */
     margin: auto;
 }
 
-.recipePopupCookTimeField {
+.recipePopupPrepTimeField {
     grid-column: 2;
+    grid-row: 3;
+    margin: auto;
+}
+
+.recipePopupCookTimeField {
+    grid-column: 3;
     grid-row: 3;
     margin: auto;
 }
@@ -179,38 +185,38 @@ if the content is smaller than the max space. */
 }
 
 .recipePopupEthnicityField {
-    grid-column: 2;
+    grid-column: 2 / 4;
     grid-row: 4;
     margin: auto;
 }
 
 .recipePopupVegetarianField {
-    grid-column: 3;
-    grid-row: 3 / 5;
-    margin: auto;
-}
-
-.recipePopupVeganField {
     grid-column: 4;
     grid-row: 3 / 5;
     margin: auto;
 }
 
-.recipePopupGlutenFreeField {
+.recipePopupVeganField {
     grid-column: 5;
     grid-row: 3 / 5;
     margin: auto;
 }
 
+.recipePopupGlutenFreeField {
+    grid-column: 6;
+    grid-row: 3 / 5;
+    margin: auto;
+}
+
 .recipePopupIngredientsField {
-    grid-column: 1 / 6;
+    grid-column: 8;
     grid-row: 5;
     margin: auto;
     text-align: justify;
 }
 
 .recipePopupInstructionsLabel {
-    grid-column: 7;
+    grid-column: 8;
     grid-row: 1;
     text-align: center;
     margin-top: 8px;
@@ -221,7 +227,7 @@ if the content is smaller than the max space. */
 }
 
 .recipePopupInstructionsField {
-    grid-column: 7;
+    grid-column: 8;
     grid-row: 1 / 6;
     text-align: justify;
     margin-top: 75px;
